<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_title">Leaderboard</string>
    <string name="learning_tab_title">Learning Leaders</string>
    <string name="skill_iq_tab_title">Skill IQ Leaders</string>
    <string name="submit_button_text">Submit</string>
    <string name="toolbar_button">Submit</string>
    <string name="gads_image">gads bunner</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB(link)</string>
</resources>