<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".SubmitActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/text_title"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="338dp"
        android:layout_height="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gads"
        android:contentDescription="@string/gads_image" />


    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Project Submission"
        android:textColor="@color/pluralSightOrange"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/pluralSightOrange"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:theme="@style/edittext"
        android:layout_width="178dp"
        android:layout_height="@dimen/text_box_height"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:textColor="@color/colorAccent"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/editTextLastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        android:autofillHints="First Name" />

    <EditText
        android:id="@+id/editTextLastName"
        android:theme="@style/edittext"
        android:layout_width="178dp"
        android:layout_height="@dimen/text_box_height"
        android:hint="@string/last_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextFirstName"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        android:autofillHints="Last Name" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:theme="@style/edittext"
        android:layout_width="300dp"
        android:layout_height="@dimen/text_box_height"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:hint="@string/email_address"
        android:textColor="@color/colorAccent"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editTextLastName"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <EditText
        android:id="@+id/editTextgithub"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/project_on_github_link"
        android:textColor="@color/colorAccent"
        android:theme="@style/edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/pluralSightOrange"
        android:text="@string/toolbar_button"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextgithub" />

</androidx.constraintlayout.widget.ConstraintLayout>